# sliderator

./: LICENSE  README.md
compiler/: Cargo.toml  run.sh  watch.sh
compiler/src/: escape.rs  main.rs
compiler/theme_to_css/: Cargo.toml  README.md
compiler/theme_to_css/src/: main.rs
sample-template/: .gitignore  README.md  print.css  slides.css  slides.js  template.html
